--- a/pages/exam/index.wxml
+++ b/pages/exam/index.wxml
@@ -9,38 +9,41 @@
     <!-- outterIndex是题目循环，innerIndex是答案选项循环   定义wx:for-item="outterItem" "innerItem"以区分内外层 -->
     <view class="we-wrapper" bindtouchmove="touchmove">
       <swiper-item wx:for="{{body}}" wx:for-index="outterIndex" wx:key="outter" wx:for-item="outterItem">
-        <scroll-view scroll-y="{{true}}" style="height:{{clientHeight?clientHeight+'px':'auto'}}" enhanced="true" show-scrollbar="false" enable-back-to-top="true">
-          <view class="subject">
+        <scroll-view scroll-y="{{true}}" style="height:{{clientHeight?clientHeight+'px':'auto'}}" enhanced="true"
+          show-scrollbar="false" enable-back-to-top="true">
+          
+            <view class="subject">
 
-            <!-- 题目 -->
-            <view class="questions">第{{outterIndex+1}}题 总400题</view>
-            <view class="questions" data-outidx="{{outterIndex}}" data-idx="{{innerIndex}}">{{outterItem.id}}.
-              {{outterItem.question}}</view>
+              <!-- 题目 -->
+              <view class="questions">第{{outterIndex+1}}题 总400题</view>
+              <view class="questions" data-outidx="{{outterIndex}}" data-idx="{{innerIndex}}">{{outterItem.id}}.
+                {{outterItem.question}}</view>
 
-            <!-- 选项 -->
-            <!-- 这里加了wx:if是用来判断是否是多选题 -->
-            <!-- 定义wx:for-item="innerItem"以区分外层outterItem -->
-            <view wx:if="{{body[outterIndex].answers[innerIndex].content}}" wx:for="{{body[outterIndex].answers}}"
-              wx:for-index="innerIndex" wx:key="inner" wx:for-item="innerItem" bindtap="answerSelected"
-              data-outterindex="{{outterIndex}}" data-innerindex="{{innerIndex}}"
-              class="answers innerItem {{innerItem.selected?'active':''}}">
-              <!-- 选项内容 -->
-              <view>{{innerItem.content}}</view>
-              <!-- 为加回车，引入空view标签 误删 -->
-              <view></view>
-              <!-- wx:if判断是否有中英翻译切换 -->
-              <view wx:if="{{outterItem.en_zn}}">{{innerItem.content_cn}}</view>
+              <!-- 选项 -->
+              <!-- 这里加了wx:if是用来判断是否是多选题 -->
+              <!-- 定义wx:for-item="innerItem"以区分外层outterItem -->
+              <view wx:if="{{body[outterIndex].answers[innerIndex].content}}" wx:for="{{body[outterIndex].answers}}"
+                wx:for-index="innerIndex" wx:key="inner" wx:for-item="innerItem" bindtap="answerSelected"
+                data-outterindex="{{outterIndex}}" data-innerindex="{{innerIndex}}"
+                class="answers innerItem {{innerItem.selected?'active':''}}">
+                <!-- 选项内容 -->
+                <view>{{innerItem.content}}</view>
+                <!-- 为加回车，引入空view标签 误删 -->
+                <view></view>
+                <!-- wx:if判断是否有中英翻译切换 -->
+                <view wx:if="{{outterItem.en_zn}}">{{innerItem.content_cn}}</view>
+              </view>
+
+              <!-- 确认答案 -->
+              <!-- 确认答案的结果当flag==1或者0说明有答案，无论对错 0为错 1为对-->
+              <view class="questions" wx:if="{{((flag==0)||(flag==1))}}">
+                <view>参考答案:{{body[outterIndex].answer}}</view>
+                <view wx:if="{{flag==1}}">恭喜你答对了！继续保持！</view>
+                <view wx:else>答错了，请总结经验再接再厉!</view>
+              </view>
+
             </view>
-
-            <!-- 确认答案 -->
-            <!-- 确认答案的结果当flag==1或者0说明有答案，无论对错 0为错 1为对-->
-            <view class="questions" wx:if="{{((flag==0)||(flag==1))}}">
-              <view>参考答案:{{body[outterIndex].answer}}</view>
-              <view wx:if="{{flag==1}}">恭喜你答对了！继续保持！</view>
-              <view wx:else>答错了，请总结经验再接再厉!</view>
-            </view>
-
-          </view>
+          
         </scroll-view>
       </swiper-item>
     </view>
@@ -54,12 +57,12 @@
   <view class="footbar_container">
     <view class="footbar_container_a">
       <!-- input输入框，绑定getInputValue世界和定义输入框最大长度为maxlength="3"类型仅为number -->
-      <input class="footbar_container_a_1" bindinput='getInputValue' maxlength="3" type="number" placeholder="题号"/>
+      <input class="footbar_container_a_1" bindinput='getInputValue' maxlength="3" type="number" placeholder="题号" />
       <view class="footbar_container_a_2" bindtap="goto">跳转</view>
       <view class="footbar_container_a_3 submit_btn" bindtap="submit">提交</view>
     </view>
     <view class="footbar_container_b">
-      <view>重置</view>
+      <view bindtap="clearAll">重置</view>
       <view>收藏</view>
       <view bindtap="toggle">中/英</view>
       <view>正确率:{{count_right}}/{{count_sum}}={{right_rate}}%</view>
