--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -11,43 +11,46 @@
     <text>Certified Solutions Architect - Associate</text>
   </view>
 </view>
-<view class="subject">
-  <view class="row">
-    <navigator class="row_1" url='/pages/exam/index'>
-      <image src="../../images/1.jpg" class="iamge_1"></image>
-      <view>
-        <view>刷题</view>
-        <view>中英对照刷题</view>
-      </view>
-    </navigator>
-    <navigator class="row_1" url='/pages/exam_English/index'>
-      <image src="../../images/1.jpg" class="iamge_2"></image>
-      <view>
-        <view>全英文</view>
-        <view>全英文答题</view>
-      </view>
-    </navigator>
-    <navigator class="row_1" url='/pages/exam_collection/index'>
-      <image src="../../images/1.jpg" class="iamge_3"></image>
-      <view>
-        <view>收藏</view>
-        <view>收藏库答题</view>
-      </view>
-    </navigator>
-    <navigator class="row_1" url='/pages/exam_simulated/index'>
-      <image src="../../images/1.jpg" class="iamge_4"></image>
-      <view>
-        <view>模拟考试</view>
-        <view>模拟练习答题</view>
-      </view>
-    </navigator>
-    <navigator class="row_1" url='/pages/exam_quick/index'>
-      <image src="../../images/1.jpg" class="iamge_4"></image>
-      <view>
-        <view>快速强记</view>
-        <view>快速强记答题</view>
-      </view>
-    </navigator>
-  </view>
+<view>
+  <view wx:if="{{1}}" class="if_vip" bindtap="if_vip">aaa</view>
+  <view class="subject">
+    <view class="row">
+      <navigator class="row_1" url='/pages/exam/index'>
+        <image src="../../images/1.jpg" class="iamge_1"></image>
+        <view>
+          <view>刷题</view>
+          <view>中英对照刷题</view>
+        </view>
+      </navigator>
+      <navigator class="row_1" url='/pages/exam_English/index'>
+        <image src="../../images/1.jpg" class="iamge_2"></image>
+        <view>
+          <view>全英文</view>
+          <view>全英文答题</view>
+        </view>
+      </navigator>
+      <navigator class="row_1" url='/pages/exam_collection/index'>
+        <image src="../../images/1.jpg" class="iamge_3"></image>
+        <view>
+          <view>收藏</view>
+          <view>收藏库答题</view>
+        </view>
+      </navigator>
+      <navigator class="row_1" url='/pages/exam_simulated/index'>
+        <image src="../../images/1.jpg" class="iamge_4"></image>
+        <view>
+          <view>模拟考试</view>
+          <view>模拟练习答题</view>
+        </view>
+      </navigator>
+      <navigator class="row_1" url='/pages/exam_quick/index'>
+        <image src="../../images/1.jpg" class="iamge_4"></image>
+        <view>
+          <view>快速强记</view>
+          <view>快速强记答题</view>
+        </view>
+      </navigator>
+    </view>
 
+  </view>
 </view>
