--- a/pages/saa/index.wxss
+++ b/pages/saa/index.wxss
@@ -54,11 +54,7 @@ page {
   opacity: 0.6;
 }
 
-.text {
 
-  /* position: absolute; */
-
-}
 
 
 
@@ -77,7 +73,26 @@ page {
   justify-content: space-around;
 }
 
+.if_vip {
+  /* height: 10px; */
+  background-color: yellowgreen;
+
+}
+
+.if_vip {
+  position: absolute;
+  width: 1000px;
+  height: 600px;
+  z-index: 1;
+  opacity: 0.5;
+}
+
+
+
+
+
 .subject {
+
   display: flex;
   background-color: wheat;
   border: black solid 10rpx;
