--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -1,18 +1,13 @@
 <!--pages/about/index.wxml-->
-<view class="user_info">
-  <image class="avatar" src="{{userInfo.avatarUrl}}">
-  </image>
-  <button class="avatar_button" bindgetuserinfo="handleGetUserInfo" style='display:{{isShow?"block":"none"}}'
-    open-type="getUserInfo">
-    <text class="text">点击获取头像</text>
-  </button>
-  <view class="user_info_right">
-    <text class="userName">AWS</text>
-    <text>Certified Solutions Architect - Associate</text>
-  </view>
+
+<view class="a">
+  <image class="b" src="../../images/aaa.jpg"></image>
 </view>
+
+
+
 <view>
-  <view wx:if="{{0}}" class="if_vip" bindtap="if_vip">aaa</view>
+  <view wx:if="{{0}}" class="if_vip" bindtap="if_vip">if_vip</view>
   <view class="subject">
     <view class="row">
       <navigator class="row_1" url='/pages/exam/index'>
