--- a/pages/saa/index.wxss
+++ b/pages/saa/index.wxss
@@ -2,82 +2,23 @@ page {
   width: 100%;
   /* background-color: #99CCFF; */
 }
-
-.user_info {
-  display: flex;
-  background-color: chartreuse;
-  align-items: center;
-  padding: 3% 3%;
-  /* border: black solid 10rpx; */
+.a{
+  /* width: 750rpx; */
+  height: 300rpx;
+  /* background-color: greenyellow; */
   border-radius: 15rpx;
-  /* justify-content: space-around; */
-  /* flex-direction: column; */
-  /* align-items: center; */
+  margin: 20rpx;
+  margin-bottom: 0rpx;
 }
 
-.user_info_right {
-  margin-left: 30rpx;
-  height: 150rpx;
-  flex-direction: column;
-  justify-content: center;
+.b{
+  height: 100%;
+  width: 100%;
+  /* background-color: red; */
   border-radius: 15rpx;
-  background-color: cornflowerblue;
-}
-
-.avatar {
-  width: 200rpx;
-  height: 200rpx;
-
-  border-radius: 15%;
-  /* margin: 100rpx 0; */
-
-  background-color: red;
-}
-
-.user_info .avatar_button {
-  /* margin-top: 0%;
-  width:100%;
-  height:100%;
-  position:absolute;
-  background-color:#999;
-  z-index:9999;
-  top:0;
-  left:0;
-  opacity: 0.70; */
-  position: absolute;
-  text-align: center;
-  z-index: 999;
-  width: 200rpx;
-  height: 200rpx;
-  border-radius: 15%;
-
-  opacity: 0.6;
 }
 
 
-
-
-
-.user_info_right {
-  display: flex;
-  background-color: cornflowerblue;
-}
-
-.exam_info {
-  /* font-size: small; */
-  display: flex;
-  background-color: aqua;
-  padding: 3% 3%;
-  border: black solid 10rpx;
-  border-radius: 15rpx;
-  justify-content: space-around;
-}
-
-.if_vip {
-  /* height: 10px; */
-  background-color: yellowgreen;
-
-}
 
 .if_vip {
   position: absolute;
@@ -85,6 +26,7 @@ page {
   height: 600px;
   z-index: 1;
   opacity: 0.5;
+  background-color: red;
 }
 
 
