优化了ui设计

--- a/pages/about/index.wxml
+++ b/pages/about/index.wxml
@@ -1,20 +1,29 @@
 <!--pages/about/index.wxml-->
 <view class="user_info">
   <image class="avatar" src="{{userInfo.avatarUrl}}">
-   
+
   </image>
-   <button class="avatar_button" bindgetuserinfo="handleGetUserInfo" style='display:{{isShow?"block":"none"}}' open-type="getUserInfo">
+  <button class="avatar_button" bindgetuserinfo="handleGetUserInfo" style='display:{{isShow?"block":"none"}}'
+    open-type="getUserInfo">
     <text class="text">点击获取头像</text>
-    </button>
+  </button>
   <view class="user_info_right">
     <text class="userName">hello,{{userInfo.nickName}}!</text>
     <text>欢迎来到aws考试</text>
   </view>
 </view>
 
-  <view class="exam_info">
-    <view>考试代码 a</view>
-    <view>及格分数 75%</view>
-    <view>考试题数 65题</view>
-    <view>题库总数 400题</view>
-  </view>
+<view class="exam_info">
+  <view>考试代码 a</view>
+  <view>及格分数 75%</view>
+  <view>考试题数 65题</view>
+  <view>题库总数 400题</view>
+</view>
+
+<view>
+  <view>云</view>
+  <view>备战指南</view>
+  <view>免费资料</view>
+  <view>爱好者微信群</view>
+  <view>关于</view>
+</view>
