--- a/pages/about/index.wxss
+++ b/pages/about/index.wxss
@@ -32,7 +32,7 @@ page {
   border-radius: 15%;
   /* margin: 100rpx 0; */
 
-  background-color: red;
+  background-color: white;
 }
 .user_info .avatar_button{
   /* margin-top: 0%;
