--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -11,36 +11,36 @@
   <view class="subject">
     <view class="row">
       <navigator class="row_1" url='/pages/exam/index'>
-        <image src="../../images/1.jpg" class="iamge"></image>
-        <view>
+        <image src="../../images/a.png" class="iamge"></image>
+        <view class="row_1_right">
           <view>刷题</view>
           <view>中英对照刷题</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_English/index'>
-        <image src="../../images/1.jpg" class="iamge"></image>
-        <view>
+        <image src="../../images/b.png" class="iamge"></image>
+        <view class="row_1_right">
           <view>全英文</view>
           <view>全英文答题</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_collection/index'>
-        <image src="../../images/1.jpg" class="iamge"></image>
-        <view>
+        <image src="../../images/c.png" class="iamge"></image>
+        <view class="row_1_right">
           <view>收藏</view>
           <view>收藏库答题</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_simulated/index'>
-        <image src="../../images/1.jpg" class="iamge"></image>
-        <view>
+        <image src="../../images/d.png" class="iamge"></image>
+        <view class="row_1_right">
           <view>模拟考试</view>
           <view>模拟练习答题</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_quick/index'>
         <image src="../../images/1.jpg" class="iamge"></image>
-        <view>
+        <view class="row_1_right">
           <view>快速强记</view>
           <view>快速强记答题</view>
         </view>
