修改了ui 增加了hover-class按动按钮显示白色反馈

--- a/pages/about/index.wxss
+++ b/pages/about/index.wxss
@@ -22,7 +22,8 @@ page {
   flex-direction: column;
   justify-content: center;
   border-radius: 15rpx;
-  background-color: cornflowerblue;
+  /* background-color: cornflowerblue; */
+  display: flex;
 }
 
 .avatar {
@@ -57,10 +58,7 @@ page {
 
 
 
-.user_info_right {
-  display: flex;
-  background-color: cornflowerblue;
-}
+
 
 .exam_info {
   /* font-size: small; */
