--- a/pages/exam/index.wxss
+++ b/pages/exam/index.wxss
@@ -1,17 +1,19 @@
-.master{
+.master {
   background-color: #ffffff;
 }
 
 
 
-.answers, .questions{
-/* background-color: darkgrey; */
-padding: 20rpx;
-margin: 20rpx;
-/* border: black solid 2rpx; */
-border-radius: 15rpx;
+.answers,
+.questions {
+  /* background-color: darkgrey; */
+  padding: 20rpx;
+  margin: 20rpx;
+  /* border: black solid 2rpx; */
+  border-radius: 15rpx;
 }
-.questions{
+
+.questions {
   background-color: #D9EFFA;
 }
 
@@ -21,29 +23,31 @@ border-radius: 15rpx;
   margin-top: 10rpx;
   background-color: #F4F9FC;
 }
- 
 
-.placeholder{
+
+.placeholder {
   height: 5rem;
   width: 100%;
 
 }
 
 
-.footbar{
+.footbar {
   height: 5rem;
   width: 100%;
   position: fixed;
   bottom: 0;
   background-color: #99CCFF;
 }
-.footbar_container{
+
+.footbar_container {
   height: 100%;
   display: flex;
   flex-direction: column;
 
 }
-.footbar_container_a{
+
+.footbar_container_a {
   display: flex;
   height: 100%;
   justify-content: space-around;
@@ -51,14 +55,16 @@ border-radius: 15rpx;
   background-color: greenyellow;
 
 }
-.footbar_container_b{
+
+.footbar_container_b {
   display: flex;
   height: 100%;
   justify-content: space-around;
   align-items: center;
 
 }
-.footbar_container_a_1{
+
+.footbar_container_a_1 {
   display: flex;
   width: 100%;
   height: 100%;
@@ -66,16 +72,18 @@ border-radius: 15rpx;
   justify-content: center;
   align-items: center;
 }
-.footbar_container_a_2{
+
+.footbar_container_a_2 {
   display: flex;
   width: 100%;
   height: 100%;
   background-color: honeydew;
   justify-content: center;
   align-items: center;
-  
+
 }
-.footbar_container_a_3{
+
+.footbar_container_a_3 {
   display: flex;
   width: 200%;
   height: 100%;
@@ -83,6 +91,7 @@ border-radius: 15rpx;
   justify-content: center;
   align-items: center;
 }
+
 swiper-item {
   overflow: scroll;
 }
@@ -94,4 +103,45 @@ swiper-item {
   /* color: #ffffff; */
   background-color: #D9EFFA;
 }
- 
+
+
+
+.hover_class {
+  color:#f8f8f8;
+}
+
+/* .footbar_container_b_1 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  justify-content: center;
+  align-items: center;
+}
+
+.footbar_container_b_2 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: gold;
+  justify-content: center;
+  align-items: center;
+}
+
+.footbar_container_b_3 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: royalblue;
+  justify-content: center;
+  align-items: center;
+}
+
+.footbar_container_b_4 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: ghostwhite;
+  justify-content: center;
+  align-items: center;
+} */
