--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -1,7 +1,7 @@
 <!--pages/about/index.wxml-->
 
 <view class="a">
-  <image class="b" src="../../images/saa.png"></image>
+  <image class="b" src="../../images/banner_saa.png"></image>
 </view>
 
 
@@ -14,23 +14,23 @@
         <image src="../../images/a.png" class="iamge"></image>
         <view class="row_1_right">
           <view>刷题</view>
-          <view>中英对照刷题</view>
+          <view>刷题模式，记忆知识点</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_English/index'>
         <image src="../../images/b.png" class="iamge"></image>
         <view class="row_1_right">
-          <view>全英文</view>
-          <view>全英文答题</view>
+          <view>背题</view>
+          <view>背题模式，快速记忆</view>
         </view>
       </navigator>
-      <navigator class="row_1" url='/pages/exam_collection/index'>
+      <!-- <navigator class="row_1" url='/pages/exam_collection/index'>
         <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
           <view>收藏</view>
           <view>收藏库答题</view>
         </view>
-      </navigator>
+      </navigator> -->
       <navigator class="row_1" url='/pages/exam_simulated/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
