--- a/pages/cloud/index.wxml
+++ b/pages/cloud/index.wxml
@@ -16,34 +16,36 @@
 <view class="a">
   <view class="b">
     <view class="c">考试代码</view>
-    <view class="c">CCP</view>
+    <view class="c">CCP/CLF</view>
     <view class="c">SAA-C02</view>
     <view class="c">SAP-C01</view>
-  </view>
-  <view class="b">
-    <view class="c">及格分数</view>
-    <view class="c">75%</view>
-    <view class="c">75%</view>
-    <view class="c">75%</view>
-    
   </view>
   <view class="b">
     <view class="c">考试题数</view>
     <view class="c">65题</view>
     <view class="c">65题</view>
-    <view class="c">65题</view>
+    <view class="c">75题</view>
   </view>
+  <view class="b">
+    <view class="c">及格分数</view>
+    <view class="c">70%</view>
+    <view class="c">72%</view>
+    <view class="c">75%</view>
+    
+  </view>
+  
   <view class="b">
     <view class="c">考试时长</view>
-    <view class="c">180min</view>
-    <view class="c">180min</view>
+    <view class="c">90min</view>
+    <view class="c">130min</view>
     <view class="c">180min</view>
   </view>
+
   <view class="b">
     <view class="c">题库数目</view>
-    <view class="c">400题</view>
-    <view class="c">400题</view>
-    <view class="c">400题</view>
+    <view class="c">180题</view>
+    <view class="c">407题</view>
+    <view class="c">350题</view>
   </view>
 </view>
 
