--- a/pages/ccp/index.wxss
+++ b/pages/ccp/index.wxss
@@ -1,6 +1,6 @@
 page {
   width: 100%;
-  /* background-color: #99CCFF; */
+  background-color: rgb(245, 245, 245);
 }
 .a{
   /* width: 750rpx; */
@@ -60,7 +60,7 @@ page {
   margin: 10rpx;
   padding: 20rpx;
   border-radius: 15rpx;
-  background-color: #eeeeee;
+  background-color: rgb(227, 227, 227);
   /* border: black solid 3rpx; */
 }
 .row_1_right{
