--- a/pages/saa/index.wxss
+++ b/pages/saa/index.wxss
@@ -27,9 +27,16 @@ page {
   height: 600px;
   z-index: 1;
   opacity: 0.5;
-  background-color: red;
+  /* background-color: red; */
 }
-
+/* .if_vip_font {
+  position: absolute;
+  width: 1000px;
+  height: 600px;
+  z-index: 1;
+  opacity: 0.5;
+  
+} */
 
 
 
