--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -16,7 +16,7 @@
         <image src="../../images/a.png" class="iamge"></image>
         <view class="row_1_right">
           <view>学习模式</view>
-          <view>经典模式，在答题中学习</view>
+          <view>经典中英双语模式，在答题中学习</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_English/index'>
