--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -19,7 +19,7 @@
           <view>经典中英双语模式，在答题中学习</view>
         </view>
       </navigator>
-      <navigator class="row_1" url='/pages/exam_English/index'>
+      <navigator class="row_1" url='/pages/exam_remember/index'>
         <image src="../../images/b.png" class="iamge"></image>
         <view class="row_1_right">
           <view>记忆模式</view>
@@ -49,14 +49,14 @@
       </navigator> -->
 
 
-      <navigator class="row_1" url='/pages/exam_quick/index'>
+      <navigator class="row_1" url='/pages/exam_superman/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
           <view>神仙模式</view>
           <view>欲练此功，必先自宫</view>
         </view>
       </navigator>
-      <navigator class="row_1" url='/pages/exam_quick/index'>
+      <navigator class="row_1" url='/pages/exam_zen/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
           <view>禅模式</view>
