--- a/pages/exam_remember/index.wxml
+++ b/pages/exam_remember/index.wxml
@@ -23,24 +23,20 @@
 
 
             <view class="questions">
-              <view data-outidx="{{outterIndex}}" data-idx="{{innerIndex}}"
-              wx:if="{{outterItem.en_zn}}">{{outterItem.id}}.         {{outterItem.question_cn}}
+              <view data-outidx="{{outterIndex}}" data-idx="{{innerIndex}}" wx:if="{{outterItem.en_cn==0}}">{{outterItem.id}}.{{outterItem.question}}
               </view>
-              <view data-outidx="{{outterIndex}}" data-idx="{{innerIndex}}"
-              wx:else>{{outterItem.id}}.         {{outterItem.question}}
+              <view data-outidx="{{outterIndex}}" data-idx="{{innerIndex}}" wx:if="{{outterItem.en_cn==1}}">{{outterItem.id}}.{{outterItem.question_cn}}
               </view>
-              <!-- wx:if判断是否有中英翻译切换 -->
-              <!-- <view >{{outterItem.question_cn}}</view> -->
+              
             </view>
 
 
             <!-- 确认答案 -->
             <!-- 确认答案的结果当flag==1或者0说明有答案，无论对错 0为错 1为对-->
-            <view class="questions"
-            >
+            <view class="questions" wx:if="{{((flag==0)||(flag==1))}}">
               <view>正确答案:{{body[outterIndex].answer}}</view>
-              
-              
+              <view wx:if="{{flag==1}}">恭喜你答对了！继续保持！</view>
+              <view wx:else>答错了，请总结经验再接再厉!</view>
             </view>
 
 
@@ -54,9 +50,10 @@
               data-outterindex="{{outterIndex}}" data-innerindex="{{innerIndex}}"
               class="answers innerItem {{innerItem.selected?'active':''}}">
               <!-- 选项内容 -->
-              <view wx:if="{{outterItem.en_zn}}">{{innerItem.content_cn}}</view>
-              <view wx:else>{{innerItem.content}}</view>
               
+              <!-- wx:if判断是否有中英翻译切换 -->
+              <view wx:if="{{outterItem.en_cn==0}}">{{innerItem.content}}</view>
+              <view wx:if="{{outterItem.en_cn==1}}">{{innerItem.content_cn}}</view>
             </view>
 
 
@@ -77,7 +74,7 @@
       <!-- input输入框，绑定getInputValue世界和定义输入框最大长度为maxlength="3"类型仅为number -->
       <input class="footbar_container_a_1" bindinput='getInputValue' maxlength="3" type="number" placeholder="题号" />
       <view class="footbar_container_a_2" bindtap="goto" hover-class="hover_class">跳转</view>
-      <!-- <view class="footbar_container_a_3 submit_btn" bindtap="submit" hover-class="hover_class">提交</view> -->
+      
     </view>
     <view class="footbar_container_b">
       <view bindtap="clearAll" hover-class="hover_class" class="footbar_container_b_1">重置</view>
@@ -88,7 +85,7 @@
       <view hover-class="hover_class">
         <view bindtap="toggle" class="footbar_container_b_3">中/英</view>
       </view>
-      <!-- <view class="footbar_container_b_4">正确率:{{count_right}}/{{count_sum}}={{right_rate}}%</view> -->
+      
     </view>
   </view>
 </view>
