--- a/pages/ccp/index.wxss
+++ b/pages/ccp/index.wxss
@@ -1,6 +1,7 @@
 page {
   width: 100%;
   background-color: rgb(245, 245, 245);
+  /* background-color: #99CCFF; */
 }
 .a{
   /* width: 750rpx; */
@@ -22,13 +23,20 @@ page {
 
 .if_vip {
   position: absolute;
+  width: 100000px;
+  height: 6000px;
+  z-index: 1;
+  opacity: 0.5;
+  /* background-color: red; */
+}
+/* .if_vip_font {
+  position: absolute;
   width: 1000px;
   height: 600px;
   z-index: 1;
   opacity: 0.5;
-  background-color: red;
-}
-
+  
+} */
 
 
 
