--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -57,7 +57,7 @@
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/exam_zen/index'>
-        <image src="../../images/d.png" class="iamge"></image>
+        <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
           <view>禅模式</view>
           <view>远离电子产品喧嚣，净心学习</view>
