--- a/pages/sap/index.wxss
+++ b/pages/sap/index.wxss
@@ -23,13 +23,20 @@ page {
 
 .if_vip {
   position: absolute;
+  width: 100000px;
+  height: 6000px;
+  z-index: 1;
+  opacity: 0.5;
+  /* background-color: red; */
+}
+/* .if_vip_font {
+  position: absolute;
   width: 1000px;
   height: 600px;
   z-index: 1;
   opacity: 0.5;
-  background-color: red;
-}
-
+  
+} */
 
 
 
