用户user_openid界面加入clearstorage函数

--- a/pages/user_openid/index.wxml
+++ b/pages/user_openid/index.wxml
@@ -2,3 +2,4 @@
 <button bindtap="getOpenId">获取openid</button>
 <view>openid：{{openid}}</view>
 <view>版本号：1.4.3</view>
+<button bindtap="clearstoragesync">清空缓存</button>
