制作了ccp的eccp_xam交互
还差ccp底下的几个没做

--- a/pages/ccp/index.wxml
+++ b/pages/ccp/index.wxml
@@ -14,35 +14,35 @@
   
   <view class="subject">
     <view class="row">
-      <navigator class="row_1" url='/pages/exam/index'>
+      <navigator class="row_1" url='/pages/ccp_exam/index'>
         <image src="../../images/a.png" class="iamge"></image>
         <view class="row_1_right">
           <view>学习模式</view>
           <view>经典中英双语模式，在答题中学习</view>
         </view>
       </navigator>
-      <navigator class="row_1" url='/pages/exam_remember/index'>
+      <navigator class="row_1" url='/pages/ccp_exam_remember/index'>
         <image src="../../images/b.png" class="iamge"></image>
         <view class="row_1_right">
           <view>记忆模式</view>
           <view>快速记忆背题，五年高考，三年模拟</view>
         </view>
       </navigator>
-      <!-- <navigator class="row_1" url='/pages/exam_collection/index'>
+      <!-- <navigator class="row_1" url='/pages/ccp_exam_collection/index'>
         <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
           <view>收藏</view>
           <view>收藏库答题</view>
         </view>
       </navigator> -->
-      <!-- <navigator class="row_1" url='/pages/exam_simulated/index'>
+      <!-- <navigator class="row_1" url='/pages/ccp_exam_simulated/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
           <view>模拟考试</view>
           <view>模拟练习答题</view>
         </view>
       </navigator> -->
-      <!-- <navigator class="row_1" url='/pages/exam_quick/index'>
+      <!-- <navigator class="row_1" url='/pages/ccp_exam_quick/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
           <view>快速强记</view>
@@ -51,14 +51,14 @@
       </navigator> -->
 
 
-      <navigator class="row_1" url='/pages/exam_superman/index'>
+      <navigator class="row_1" url='/pages/ccp_exam_superman/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
           <view>神仙模式</view>
           <view>欲练此功，必先自宫</view>
         </view>
       </navigator>
-      <navigator class="row_1" url='/pages/exam_zen/index'>
+      <navigator class="row_1" url='/pages/ccp_exam_zen/index'>
         <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
           <view>禅模式</view>
