--- a/pages/sap_exam_zen/index.wxml
+++ b/pages/sap_exam_zen/index.wxml
@@ -1,2 +1,2 @@
-<!--pages/sap_exam_zen/index.wxml-->
-<text>pages/sap_exam_zen/index.wxml</text>
+<!--pages/exam_zen/index.wxml-->
+<view class="a">敬请期待</view>
