--- a/pages/saa_exam_zen/index.wxml
+++ b/pages/saa_exam_zen/index.wxml
@@ -1,2 +1,5 @@
 <!--pages/exam_zen/index.wxml-->
-<view class="a">敬请期待</view>
+<!-- <view class="a">敬请期待</view> -->
+<view class="a">
+  <image  src="../../images/zen.jpg"></image>
+</view>
