--- a/pages/saa_exam_zen/index.wxss
+++ b/pages/saa_exam_zen/index.wxss
@@ -1,5 +1,11 @@
-.a{
+.a {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+image {
+  display: flex;
+  width: 800rpx;
+  height: 1200rpx;
 }
