--- a/pages/sap/index.wxml
+++ b/pages/sap/index.wxml
@@ -60,7 +60,7 @@
         <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
           <view>禅模式</view>
-          <view>远离电子产品喧嚣，净心学习</view>
+          <view>一念一清净，一叶一如来</view>
         </view>
       </navigator>
 
