--- a/pages/sap/index.wxml
+++ b/pages/sap/index.wxml
@@ -1,6 +1,6 @@
 <!--pages/about/index.wxml-->
 
-<view class="a">
+<view class="a" bindtap="toggleDialog">
   <image class="b" src="../../images/banner_sap.png"></image>
 </view>
 
@@ -68,5 +68,18 @@
 
     </view>
 
+  </view>
+</view>
+
+
+
+
+<view class="dialog {{ showDialog ? 'dialog--show' : 'pop_hidden' }}">
+  <view class="dialog_mask" bindtap="toggleDialog" />
+  <view class="dialog_container">
+    <view>
+      <image class="dialog_image" src="../../images/zen1.jpg">
+      </image>
+    </view>
   </view>
 </view>
