--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -78,7 +78,7 @@
   <view class="dialog_mask" bindtap="toggleDialog" />
   <view class="dialog_container">
     <view>
-      <image class="dialog_image" src="../../images/zen1.jpg">
+      <image class="dialog_image" src="../../images/banner.png">
       </image>
     </view>
   </view>
