--- a/pages/sap/index.wxml
+++ b/pages/sap/index.wxml
@@ -74,11 +74,12 @@
 
 
 
+
 <view class="dialog {{ showDialog ? 'dialog--show' : 'pop_hidden' }}">
   <view class="dialog_mask" bindtap="toggleDialog" />
   <view class="dialog_container">
     <view>
-      <image class="dialog_image" src="../../images/zen1.jpg">
+      <image class="dialog_image" src="../../images/ad_sap.png">
       </image>
     </view>
   </view>
