--- a/pages/ccp/index.wxss
+++ b/pages/ccp/index.wxss
@@ -71,9 +71,15 @@ page {
   background-color: rgb(227, 227, 227);
   /* border: black solid 3rpx; */
 }
+
 .row_1_right{
   margin-left: 30rpx;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
 }
+
+
 .iamge {
   width: 100rpx;
   height: 100rpx;
